Sigil v0.1.6 <ADD_DATE>
    - fixed an issue with empty NavMap generation in the NCX if the file had no headings;
    the epub specification forbids empty NavMaps (issue #174)
    - fixed an issue with the document not being marked as modified in the GUI if the user only
    changed the document's metadata (issue #189)
    - fixed a rare bug with searching for a string that is at the very end of a document (issue #181)
    - new "Remove Formatting" WYSIWYG action (issue #56)
    - Sigil now preserves ALL HTML entity references (it used to convert most to Unicode equivalents);
    this change was necessary since soft hyphens were becoming "invisible" (issue #186)
    - implemented "blockquote" support through new WYSIWYG actions: "Indent Less" and
    "Indent More" (issue #41)
    - updating Qt fixed an issue with images wrapped in SVG tags not being shown (issue #91)
    - updated Qt from 4.5.2 to 4.6.0
    - fixed an issue with regex matching in Code View when such regexes referenced line
    endings with "\n" (issue #182)
    - PageUp and PageDown keys now work in Book View (issue #130)
    - fixed a crash invoked on switching views and searching in Book View when the caret 
    element's parent has HTML comment children (issue #179)
    - "Replace All" is now treated as a single undo/redo operation *in Code View*
    - tentatively fixed a problem with bad TOC generation if the input file had multiple headings
    with the same ID (across XHTML files) (issue #177)
    - fixed a regression that was causing crashes when switching views

Sigil v0.1.5 2009.11.25
    - fixed a race condition with view syncing in Book View
    - fixed an issue with loading text files that don't end with a newline (some text would end up missing)
    - A NEW FIND & REPLACE DIALOG (issue #13)
    - no more hard line breaks in Code View (courtesy of recent performance optimisations) (issue #61)
    - TOC Editor now remembers its size across invocations and program launches