@@ -48,6 +48,7 @@ static const int ZOOM_SLIDER_MIN            = 0;
 static const int ZOOM_SLIDER_MAX            = 1000;
 static const int ZOOM_SLIDER_MIDDLE         = qRound( ( ZOOM_SLIDER_MAX - ZOOM_SLIDER_MIN ) / 2.0f );
 static const int ZOOM_SLIDER_WIDTH          = 140;
+static const QString REPORTING_ISSUES_WIKI  = "http://code.google.com/p/sigil/wiki/ReportingIssues";
 
 // The <hr> tag is wrapped in <div>'s because of issue #78;
 // basically it's a workaround for a webkit bug
@@ -804,6 +805,13 @@ void MainWindow::TOCEditorDialog()
         UpdateBookViewFromSource();
         UpdateCodeViewFromSource();
     }
+}
+
+
+// Implements Report An Issue action functionality
+void MainWindow::ReportAnIssue()
+{
+    QDesktopServices::openUrl( QUrl( REPORTING_ISSUES_WIKI ) );
 }
 
 
@@ -1788,6 +1796,7 @@ void MainWindow::ConnectSignalsToSlots()
     
     connect( ui.actionMetaEditor,           SIGNAL( triggered() ),      this,   SLOT( MetaEditorDialog()    ) );
     connect( ui.actionTOCEditor,            SIGNAL( triggered() ),      this,   SLOT( TOCEditorDialog()     ) );
+    connect( ui.actionReportAnIssue,        SIGNAL( triggered() ),      this,   SLOT( ReportAnIssue()       ) );
     connect( ui.actionAbout,                SIGNAL( triggered() ),      this,   SLOT( AboutDialog()         ) );
     
     connect( m_wBookView->page(),           SIGNAL( selectionChanged() ),   this,   SLOT( UpdateUIBookView() ) );
